--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <html class="dark light">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y8XLWX2T51"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y8XLWX2T51');
+</script>
 
 {% include "partials/header.html" %}
 
@@ -12,13 +21,13 @@
 
         {# Post page is the default #}
         {% block main_content %}
-            Nothing here?!
+        Nothing here?!
         {% endblock main_content %}
 
-        {% if page.extra.comment is defined  %}
-            {% set show_comment = page.extra.comment %}
+        {% if page.extra.comment is defined %}
+        {% set show_comment = page.extra.comment %}
         {% else %}
-            {% set show_comment = false %}
+        {% set show_comment = false %}
         {% endif %}
 
         {% if show_comment %}
