--- a/templates/page.html
+++ b/templates/page.html
@@ -1,5 +1,1 @@
-{% extends "base.html" %}
-
-{% block main_content %}
-    {{ post_macros::content(page=page)}}
-{% endblock main_content %}
+{% extends "even/templates/page.html" %}
