--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,5 @@
 {% extends "even/templates/index.html" %}
+
 {% block title %}{{config.title}} - {{page.title}}{% endblock title %}
 
 {% block content %}
@@ -33,11 +34,14 @@
         <h1 class="post__title">
             <a href="{{ page.permalink }}">{{ page.title }}</a>
         </h1>
-        <!-- Date is removed here -->
+        <!-- Date has been removed here -->
     </header>
     <div class="post-content">
       {{ page.content | safe }}
     </div>
+
+    {% block page_before_footer %}
+    {% endblock page_before_footer %}
 
     <div class="post-footer">
         {% block page_footer %}
@@ -50,5 +54,8 @@
             {% endif %}
         {% endblock page_footer %}
     </div>
+
+    {% block page_after_footer %}
+    {% endblock page_after_footer %}
 </article>
 {% endblock content %}
